# agent-checkpoint-mcp

./: .dockerignore  .gitignore  README.md  pyproject.toml
docker/: Dockerfile  entrypoint.sh  requirements.txt
examples/: AGENTS.md.example  CLAUDE.md.example  claude-settings-hooks.json
install/: agent-checkpoint-mcp-docker  docker.sh  install.ps1  install.sh
src/agent_checkpoint_mcp/: __init__.py  assets.py  cli.py  docker_config.py  hooks.py  project.py  render.py  server.py  setup_agents.py  storage.py  transcript.py
tests/: conftest.py  test_cli_init.py  test_docker_config.py  test_docker_installer.py  test_docker_launcher.py  test_hooks.py  test_server.py  test_setup_codex.py  test_storage.py  test_transcript.py
