[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-checkpoint-mcp"
version = "0.1.0"
description = "Local MCP server that saves work-in-progress checkpoints so any AI agent can resume a multi-step plan exactly where a previous session was cut off."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Diego Gonzalez" }]
keywords = ["mcp", "model-context-protocol", "checkpoint", "agent", "claude-code", "codex", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.0"]

[project.urls]
Homepage = "https://github.com/DiegoWare/agent-checkpoint-mcp"
Repository = "https://github.com/DiegoWare/agent-checkpoint-mcp"
Issues = "https://github.com/DiegoWare/agent-checkpoint-mcp/issues"

[project.scripts]
agent-checkpoint-mcp = "agent_checkpoint_mcp.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_checkpoint_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
